# GoIT-WEB-module4

./: .env  Dockerfile  README.md  app.py  main.py  pyproject.toml  socket_client.py  socket_server.py
storage/: data.json
templates/: error.html  index.html  message.html  success_msg.html
